2001-07-12  Bradford Hovinen  <hovinen@ximian.com>

	* sound-properties-capplet.c (apply_settings): Disable launch of
	esd, due to esd's general suckiness

	* sound-properties.xml: Update to use correct names for settings

	* sound-properties-capplet.c (set_moniker_cb): Change event_sound
	to event_sounds

2001-07-10  Bradford Hovinen  <hovinen@ximian.com>

	* sound-properties-capplet.c (set_moniker_cb): Make full moniker
	(apply_settings): Release the return value
	(main): Support --get-legacy option
	(get_legacy_settings): Implement
	(create_control_cb): Connect apply_cb
	(COPY_FROM_LEGACY): Use bonobo_config_set_...
	(main): Open config database regardless of what operation is
	requested; pass to create_control callback
	(apply_settings): Use bonobo_config_get_...
	(get_legacy_settings): 
	(apply_settings): Don't accept CORBA_Environment *ev any more
	(create_control_cb): Store the config database in the property control
	(apply_settings): Use the correct setting name
	(apply_cb): Apply settings and sync
	(apply_settings): Kill esd when requested
	(get_legacy_settings): Sync database

	* sound-properties.xml: Fixed path name

2001-07-09  Bradford Hovinen  <hovinen@ximian.com>

	* sound-properties.xml: Use 0 and 1 rather than true and false

	* sound-properties-capplet.c (create_control_cb): Implement
	(main): Use create_control_cb

	* Bonobo_Control_Capplet_sound_properties.oaf: Use PropertyControl interface

	* sound-properties-capplet.c (create_dialog_cb): Update signature
	for use as a BonoboPropertyControlGetControlFn

	* Makefile.am (defaults_DATA): Add sound-properties.xml
	(EXTRA_DIST): Add defaults_DATA

	* sound-properties-capplet.c (close_cb): Don't destroy the widget
	-- it's already destroyed

2001-06-07  Christian Rose  <menthos@menthos.com>

	* sound-properties.desktop: Modified Swedish translation.

2001-04-27  Bradford Hovinen  <hovinen@ximian.com>

	* preferences.c (category_read_xml): Make description a child node
	rather than an attribute